# mender-mcu-client

./: .clang-format  .clang-format-ignore  .gitignore  .sonarcloud.properties  CMakeLists.txt  LICENSE  NOTICE  README.md
.github/workflows/: build.yml  build_tests.sh  check-code-format.yml  check_code_format.sh  check_equivalence_tests.sh  check_headers.sh  check_include_guards.sh  ci.yml  do_code_format.sh
add-ons/configure/include/: mender-configure-api.h
add-ons/configure/src/: mender-configure-api.c  mender-configure.c
add-ons/inventory/include/: mender-inventory-api.h
add-ons/inventory/src/: mender-inventory-api.c  mender-inventory.c
add-ons/src/: mender-configure.c  mender-inventory.c  mender-troubleshoot.c
add-ons/troubleshoot/include/: mender-troubleshoot-api.h  mender-troubleshoot-control.h  mender-troubleshoot-file-transfer.h  mender-troubleshoot-mender-client.h  mender-troubleshoot-msgpack.h  mender-troubleshoot-port-forwarding.h  mender-troubleshoot-protomsg.h  mender-troubleshoot-shell.h
add-ons/troubleshoot/src/: mender-troubleshoot-api.c  mender-troubleshoot-control.c  mender-troubleshoot-file-transfer.c  mender-troubleshoot-mender-client.c  mender-troubleshoot-msgpack.c  mender-troubleshoot-port-forwarding.c  mender-troubleshoot-protomsg.c  mender-troubleshoot-shell.c  mender-troubleshoot.c
core/src/: mender-api.c  mender-artifact.c  mender-client.c  mender-untar.c  mender-utils.c
esp-idf/: CMakeLists.txt  Kconfig
include/: mender-addon.h  mender-api.h  mender-artifact.h  mender-client.h  mender-common.h  mender-configure.h  mender-flash.h  mender-http.h  mender-inventory.h  mender-log.h  mender-ota.h  mender-rtos.h  mender-scheduler.h  mender-shell.h  mender-storage.h  mender-tls.h  mender-troubleshoot.h  mender-untar.h  mender-utils.h  mender-websocket.h
platform/board/esp-idf/src/: mender-log.c  mender-ota.c  mender-storage.c
platform/board/posix/src/: mender-log.c  mender-ota.c
platform/board/zephyr/src/: mender-log.c  mender-ota.c  mender-shell.c  mender-storage.c
platform/flash/esp-idf/src/: mender-flash.c
platform/flash/generic/weak/src/: mender-flash.c
platform/flash/posix/src/: mender-flash.c
platform/flash/zephyr/dfu_target/src/: mender-flash.c
platform/flash/zephyr/flash_img/src/: mender-flash.c
platform/flash/zephyr/src/: mender-flash.c
platform/http/curl/src/: mender-http.c
platform/http/esp-idf/src/: mender-http.c
platform/http/zephyr/src/: mender-http.c
platform/log/esp-idf/src/: mender-log.c
platform/log/generic/weak/src/: mender-log.c
platform/log/posix/src/: mender-log.c
platform/log/zephyr/src/: mender-log.c
platform/net/curl/src/: mender-http.c  mender-websocket.c
platform/net/esp-idf/src/: mender-http.c  mender-websocket.c
platform/net/generic/curl/src/: mender-http.c  mender-websocket.c
platform/net/generic/weak/src/: mender-http.c  mender-websocket.c
platform/net/zephyr/include/: mender-net.h
platform/net/zephyr/src/: mender-http.c  mender-net.c  mender-websocket.c
platform/ota/generic/weak/src/: mender-ota.c
platform/ota/zephyr/src/: mender-ota.c
platform/rtos/freertos/src/: mender-rtos.c
platform/rtos/posix/src/: mender-rtos.c
platform/rtos/zephyr/src/: mender-rtos.c
platform/scheduler/freertos/src/: mender-scheduler.c
platform/scheduler/posix/src/: mender-scheduler.c
platform/scheduler/zephyr/src/: mender-scheduler.c
platform/shell/zephyr/src/: mender-shell.c
platform/storage/posix/src/: mender-storage.c
platform/tls/mbedtls/src/: mender-tls.c
tests/: CMakeLists.txt  valgrind_suppression_timer_create.supp
tests/mocks/: CMakeLists.txt
tests/mocks/cjson/: CMakeLists.txt
tests/mocks/cryptoauthlib/: CMakeLists.txt
tests/mocks/cryptoauthlib/include/: atca_basic.h  atca_helpers.h  atca_status.h  cryptoauthlib.h
tests/mocks/cryptoauthlib/include/calib/: calib_command.h
tests/mocks/cryptoauthlib/src/: atca_basic.c  atca_helpers.c
tests/mocks/esp-idf/: CMakeLists.txt
tests/mocks/esp-idf/include/: esp_crt_bundle.h  esp_err.h  esp_event.h  esp_event_base.h  esp_flash_partitions.h  esp_http_client.h  esp_log.h  esp_ota_ops.h  esp_partition.h  esp_transport.h  esp_transport_ws.h  esp_websocket_client.h  nvs.h  nvs_flash.h
tests/mocks/esp-idf/src/: esp_crt_bundle.c  esp_err.c  esp_http_client.c  esp_ota_ops.c  esp_websocket_client.c  nvs.c
tests/mocks/freertos/: CMakeLists.txt
tests/mocks/freertos/include/: FreeRTOSConfig.h
tests/mocks/mbedtls/: CMakeLists.txt
tests/mocks/ncs/: CMakeLists.txt
tests/mocks/ncs/include/dfu/: dfu_target.h  dfu_target_mcuboot.h
tests/mocks/ncs/src/: dfu_target.c  dfu_target_mcuboot.c
tests/mocks/tf-m/: CMakeLists.txt
tests/mocks/tf-m/include/mbedtls/: base64.h  error.h  private_access.h
tests/mocks/tf-m/include/psa/: crypto.h  crypto_compat.h  crypto_platform.h  crypto_se_driver.h  crypto_sizes.h  crypto_struct.h  crypto_types.h  crypto_values.h  error.h  internal_trusted_storage.h  protected_storage.h  storage_common.h
tests/mocks/tf-m/src/: base64.c  crypto.c  crypto_compat.c  error.c  tfm_its_api.c  tfm_ps_api.c
tests/mocks/zephyr/: CMakeLists.txt
tests/mocks/zephyr/include/: version.h
tests/mocks/zephyr/include/zephyr/: device.h  init.h  kernel.h  sys_clock.h
tests/mocks/zephyr/include/zephyr/dfu/: flash_img.h  mcuboot.h
tests/mocks/zephyr/include/zephyr/drivers/: flash.h
tests/mocks/zephyr/include/zephyr/fs/: nvs.h
tests/mocks/zephyr/include/zephyr/logging/: log.h  log_core.h
tests/mocks/zephyr/include/zephyr/net/: net_ip.h  socket.h  tls_credentials.h  websocket.h
tests/mocks/zephyr/include/zephyr/net/http/: client.h
tests/mocks/zephyr/include/zephyr/shell/: shell.h
tests/mocks/zephyr/include/zephyr/storage/: flash_map.h
tests/mocks/zephyr/include/zephyr/sys/: reboot.h  ring_buffer.h  time_units.h  util.h  util_macro.h
tests/mocks/zephyr/src/: device.c  flash.c  flash_img.c  http_client.c  kernel.c  mcuboot.c  nvs.c  reboot.c  ring_buffer.c  shell.c  socket.c  websocket.c
tests/src/: main.c
zephyr/: CMakeLists.txt  Kconfig  module.yml
(+11 files in other folders)
